@@ -75,6 +75,9 @@ AC_PROG_CC
 AM_PROG_CC_C_O
 AC_PROG_INSTALL
 
+dnl check for how to do large files
+AC_SYS_LARGEFILE
+
 case $host_os in
   solaris*)
     AC_DEFINE(ETC_INET, 1, [if a /etc/inet dir is being used])
@@ -110,15 +113,6 @@ AC_HELP_STRING([--disable-debug],[Disable debug options]),
 
     CPPFLAGS="$CPPFLAGS -DCURLDEBUG -I$srcdir/../include"
     CFLAGS="$CFLAGS -g" 
-
-    dnl check for how to do large files, needed to get the curl_off_t check
-    dnl done right
-    AC_SYS_LARGEFILE
-
-    AC_CHECK_SIZEOF(curl_off_t, ,[
-#include <stdio.h>
-#include "$srcdir/../include/curl/curl.h"
-    ])
 
     dnl set compiler "debug" options to become more picky, and remove
     dnl optimize options from CFLAGS
