@@ -4,6 +4,9 @@ This is what's new and changed in the c-ares 1.5.3 release:
  o fix pkg-config reporting of private libraries needed for static linking
  o fallback to gettimeofday when monotonic clock is unavailable at run-time
  o ares_gethostbyname() fallback from AAA to A records with CNAME present
+ o allow --enable-largefile and --disable-largefile configurations
+ o configure process no longer needs nor checks size of curl_off_t
+ o library will now be built with _REENTRANT symbol defined
 
 Thanks go to these friendly people for their efforts and contributions:
 
